--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ python-dotenv==1.1.0
 langchain-community==0.3.20
 pypdf==5.4.0
 PyPDF2==3.0.1
-docx==0.2.4
+python-docx==1.1.2
 deep-translator==1.9.1
 langchain-google-genai==2.0.10
